# edge-sandboxes

./: .gitignore  README.md  package.json  pyproject.toml  wrangler.toml
cf-worker/: Dockerfile  package.json  wrangler.toml
cf-worker/src/: index.ts
edge-functions/api/sandbox/: [[default]].js
edge-worker/: Dockerfile  package-lock.json  package.json  tsconfig.json  wrangler.toml
edge-worker/src/: cf.ts  circuit-breaker.ts  core.ts  edgeone.ts  handlers.ts  router.ts  types.ts
edge-worker/src/providers/: base.ts  cloudflare-native.ts  cloudflare.ts  daytona.ts  e2b.ts  edgeone.ts  index.ts  modal.ts  multi-account.ts
edge_sandboxes/: __init__.py  core.py  exceptions.py  multi_account.py  resilience.py
edge_sandboxes/providers/: __init__.py  cloudflare.py  daytona.py  e2b.py  edge_worker.py  edgeone.py  hopx.py  modal.py  sprites.py  vercel.py
edgeone-worker/src/: index.ts
examples/: basic.py  multi_account.py
functions/api/sandbox/: [[catchall]].js  [[catchall]].ts
