[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edge-sandboxes"
version = "0.1.0"
description = "Edge-native universal sandbox router with automatic fallback"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "edge-sandboxes contributors" }]
keywords = ["sandbox", "edge", "cloudflare", "e2b", "daytona", "ai", "code-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
]

# Zero required deps — everything is optional
dependencies = []

[project.optional-dependencies]
e2b = ["e2b>=0.20.0"]
daytona = ["httpx>=0.25.0"]
cloudflare = ["httpx>=0.25.0"]
modal = ["modal>=0.60.0"]
all = ["e2b>=0.20.0", "httpx>=0.25.0", "modal>=0.60.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/edge-sandboxes"
Documentation = "https://github.com/YOUR_ORG/edge-sandboxes#readme"
Repository = "https://github.com/YOUR_ORG/edge-sandboxes"
Issues = "https://github.com/YOUR_ORG/edge-sandboxes/issues"

[project.scripts]
edge-sandboxes = "edge_sandboxes.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["edge_sandboxes"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
